// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown extensions backward compatibility support self closing html tag 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "position": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "properties": {
            "src": "foo.jpg",
          },
          "tagName": "img",
          "type": "element",
        },
        {
          "position": {
            "end": {
              "column": 1,
              "line": 2,
              "offset": 27,
            },
            "start": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
          },
          "type": "text",
          "value": "
",
        },
        {
          "children": [],
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 32,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 27,
            },
          },
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 2,
          "offset": 37,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 4,
                      "offset": 49,
                    },
                    "start": {
                      "column": 3,
                      "line": 4,
                      "offset": 45,
                    },
                  },
                  "type": "text",
                  "value": "left",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 4,
                  "offset": 49,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                  "offset": 45,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 6,
                      "offset": 62,
                    },
                    "start": {
                      "column": 3,
                      "line": 6,
                      "offset": 57,
                    },
                  },
                  "type": "text",
                  "value": "right",
                },
              ],
              "position": {
                "end": {
                  "column": 8,
                  "line": 6,
                  "offset": 62,
                },
                "start": {
                  "column": 3,
                  "line": 6,
                  "offset": 57,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [],
          "position": {
            "end": {
              "column": 5,
              "line": 8,
              "offset": 68,
            },
            "start": {
              "column": 1,
              "line": 8,
              "offset": 64,
            },
          },
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
        {
          "position": {
            "end": {
              "column": 1,
              "line": 9,
              "offset": 74,
            },
            "start": {
              "column": 10,
              "line": 8,
              "offset": 73,
            },
          },
          "type": "text",
          "value": "
",
        },
        {
          "children": [],
          "position": {
            "end": {
              "column": 5,
              "line": 9,
              "offset": 78,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 74,
            },
          },
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "br",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 9,
          "offset": 83,
        },
        "start": {
          "column": 1,
          "line": 8,
          "offset": 64,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 11,
                      "offset": 95,
                    },
                    "start": {
                      "column": 3,
                      "line": 11,
                      "offset": 91,
                    },
                  },
                  "type": "text",
                  "value": "left",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 11,
                  "offset": 95,
                },
                "start": {
                  "column": 3,
                  "line": 11,
                  "offset": 91,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 1,
                      "line": 14,
                      "offset": 109,
                    },
                    "start": {
                      "column": 3,
                      "line": 13,
                      "offset": 103,
                    },
                  },
                  "type": "text",
                  "value": "right
",
                },
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 14,
                      "offset": 116,
                    },
                    "start": {
                      "column": 3,
                      "line": 14,
                      "offset": 111,
                    },
                  },
                  "properties": {},
                  "tagName": "br",
                  "type": "element",
                },
                {
                  "children": [],
                  "properties": {},
                  "tagName": "br",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 14,
                  "offset": 121,
                },
                "start": {
                  "column": 3,
                  "line": 13,
                  "offset": 103,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid add support for parsing custom grid syntax 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Before grid",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 22,
              "line": 3,
              "offset": 34,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "% this is normal text",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 3,
          "offset": 34,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 9,
                          "line": 7,
                          "offset": 117,
                        },
                        "start": {
                          "column": 5,
                          "line": 7,
                          "offset": 113,
                        },
                      },
                      "type": "text",
                      "value": "left",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 9,
                      "line": 7,
                      "offset": 117,
                    },
                    "start": {
                      "column": 5,
                      "line": 7,
                      "offset": 113,
                    },
                  },
                  "properties": {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": {
                "xs": "2",
              },
              "tagName": "grid",
              "type": "element",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 13,
                              "line": 9,
                              "offset": 137,
                            },
                            "start": {
                              "column": 7,
                              "line": 9,
                              "offset": 131,
                            },
                          },
                          "type": "text",
                          "value": "middle",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 15,
                          "line": 9,
                          "offset": 139,
                        },
                        "start": {
                          "column": 5,
                          "line": 9,
                          "offset": 129,
                        },
                      },
                      "properties": {},
                      "tagName": "strong",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 15,
                      "line": 9,
                      "offset": 139,
                    },
                    "start": {
                      "column": 5,
                      "line": 9,
                      "offset": 129,
                    },
                  },
                  "properties": {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": {},
              "tagName": "grid",
              "type": "element",
            },
          ],
          "properties": {
            "alignItems": "center",
            "container": "container",
            "justifyContent": "center",
          },
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 11,
                      "offset": 152,
                    },
                    "start": {
                      "column": 3,
                      "line": 11,
                      "offset": 147,
                    },
                  },
                  "type": "text",
                  "value": "right",
                },
              ],
              "position": {
                "end": {
                  "column": 8,
                  "line": 11,
                  "offset": 152,
                },
                "start": {
                  "column": 3,
                  "line": 11,
                  "offset": 147,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 14,
                      "offset": 168,
                    },
                    "start": {
                      "column": 3,
                      "line": 14,
                      "offset": 161,
                    },
                  },
                  "type": "text",
                  "value": "2nd row",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 14,
                  "offset": 168,
                },
                "start": {
                  "column": 3,
                  "line": 14,
                  "offset": 161,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 16,
              "offset": 180,
            },
            "start": {
              "column": 1,
              "line": 16,
              "offset": 170,
            },
          },
          "type": "text",
          "value": "After grid",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 16,
          "offset": 180,
        },
        "start": {
          "column": 1,
          "line": 16,
          "offset": 170,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid ignores incorrect grid like content 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 6,
              "line": 6,
              "offset": 42,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "% col
orful
%clo
wn drinking
%co
fee",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 6,
          "offset": 42,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid is able to parse deeply nested grid 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 14,
                              "line": 5,
                              "offset": 35,
                            },
                            "start": {
                              "column": 7,
                              "line": 5,
                              "offset": 28,
                            },
                          },
                          "type": "text",
                          "value": "content",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 14,
                          "line": 5,
                          "offset": 35,
                        },
                        "start": {
                          "column": 7,
                          "line": 5,
                          "offset": 28,
                        },
                      },
                      "properties": {},
                      "tagName": "p",
                      "type": "element",
                    },
                  ],
                  "properties": {},
                  "tagName": "grid",
                  "type": "element",
                },
              ],
              "properties": {},
              "tagName": "grid",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid is able to parse grid without any leading or trailing characters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 2,
                      "offset": 11,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 7,
                    },
                  },
                  "type": "text",
                  "value": "left",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 2,
                  "offset": 11,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 7,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 4,
                      "offset": 24,
                    },
                    "start": {
                      "column": 3,
                      "line": 4,
                      "offset": 19,
                    },
                  },
                  "type": "text",
                  "value": "right",
                },
              ],
              "position": {
                "end": {
                  "column": 8,
                  "line": 4,
                  "offset": 24,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                  "offset": 19,
                },
              },
              "properties": {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid is able to parse partially defined grid 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid is able to parse partially defined grid 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "text",
          "value": "Syntax examples:",
        },
      ],
      "position": {
        "end": {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "h6",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "code block
",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 5,
                      "offset": 56,
                    },
                    "start": {
                      "column": 3,
                      "line": 3,
                      "offset": 31,
                    },
                  },
                  "properties": {
                    "className": [
                      "language-yml",
                    ],
                  },
                  "tagName": "code",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 5,
                  "offset": 56,
                },
                "start": {
                  "column": 3,
                  "line": 3,
                  "offset": 31,
                },
              },
              "properties": {},
              "tagName": "pre",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
        {
          "children": [],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid preserve spaces inside code block 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "- label: print
  key: print-button
  color: secondary
  variant: contained
",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 7,
                      "offset": 102,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 7,
                    },
                  },
                  "properties": {
                    "className": [
                      "language-yml",
                    ],
                  },
                  "tagName": "code",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 7,
                  "offset": 102,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 7,
                },
              },
              "properties": {},
              "tagName": "pre",
              "type": "element",
            },
          ],
          "properties": {},
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for grid preserve spaces inside code block 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "changeReason:
  message: Please enter a reason.
  validation: ^\\w.+\\s.+
  options:
    - Reason option A
    - Reason option B
",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 8,
                          "line": 10,
                          "offset": 191,
                        },
                        "start": {
                          "column": 5,
                          "line": 3,
                          "offset": 26,
                        },
                      },
                      "properties": {
                        "className": [
                          "language-yml",
                        ],
                      },
                      "tagName": "code",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 10,
                      "offset": 191,
                    },
                    "start": {
                      "column": 5,
                      "line": 3,
                      "offset": 26,
                    },
                  },
                  "properties": {},
                  "tagName": "pre",
                  "type": "element",
                },
              ],
              "properties": {},
              "tagName": "grid",
              "type": "element",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "properties": {
                        "formula": "stringField",
                      },
                      "tagName": "banginterpolation",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 13,
                      "offset": 220,
                    },
                    "start": {
                      "column": 5,
                      "line": 13,
                      "offset": 204,
                    },
                  },
                  "properties": {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": {},
              "tagName": "grid",
              "type": "element",
            },
          ],
          "properties": {
            "container": "container",
          },
          "tagName": "grid",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "gridcontainer",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for interpolation add support for bang! interpolation syntax 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 55,
              "line": 1,
              "offset": 54,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Bang! Interpolation can stand alone like the following",
        },
      ],
      "position": {
        "end": {
          "column": 55,
          "line": 1,
          "offset": 54,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [],
          "properties": {
            "formula": "function",
          },
          "tagName": "banginterpolation",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 14,
          "line": 3,
          "offset": 69,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 56,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 17,
              "line": 5,
              "offset": 87,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 71,
            },
          },
          "type": "text",
          "value": "be parameterized",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 5,
          "offset": 87,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 71,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [],
          "properties": {
            "formula": "function|arg-one|arg-two",
          },
          "tagName": "banginterpolation",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 30,
          "line": 7,
          "offset": 118,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 89,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 9,
              "offset": 131,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 120,
            },
          },
          "type": "text",
          "value": "and appear ",
        },
        {
          "children": [],
          "properties": {
            "formula": "inline|with=argument",
          },
          "tagName": "banginterpolation",
          "type": "element",
        },
        {
          "position": {
            "end": {
              "column": 47,
              "line": 9,
              "offset": 166,
            },
            "start": {
              "column": 37,
              "line": 9,
              "offset": 156,
            },
          },
          "type": "text",
          "value": " like this",
        },
      ],
      "position": {
        "end": {
          "column": 47,
          "line": 9,
          "offset": 166,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 120,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for interpolation add support for interpolation syntax 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 49,
              "line": 1,
              "offset": 48,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Interpolation can stand alone like the following",
        },
      ],
      "position": {
        "end": {
          "column": 49,
          "line": 1,
          "offset": 48,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [],
          "properties": {
            "formula": "function",
          },
          "tagName": "interpolation",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 3,
          "offset": 62,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 50,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 17,
              "line": 5,
              "offset": 80,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 64,
            },
          },
          "type": "text",
          "value": "be parameterized",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 5,
          "offset": 80,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 64,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "children": [],
          "properties": {
            "formula": "function|argument",
          },
          "tagName": "interpolation",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 7,
          "offset": 103,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 82,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "type": "text",
      "value": "
",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 9,
              "offset": 116,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 105,
            },
          },
          "type": "text",
          "value": "and appear ",
        },
        {
          "children": [],
          "properties": {
            "formula": "inline|with=argument",
          },
          "tagName": "interpolation",
          "type": "element",
        },
        {
          "position": {
            "end": {
              "column": 46,
              "line": 9,
              "offset": 150,
            },
            "start": {
              "column": 36,
              "line": 9,
              "offset": 140,
            },
          },
          "type": "text",
          "value": " like this",
        },
      ],
      "position": {
        "end": {
          "column": 46,
          "line": 9,
          "offset": 150,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 105,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for interpolation ignores empty brackets 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "{{}} !{{}}",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for interpolation ignores unmatched brackets 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "{{f}  {f}  {{f !{{f}  !{f}  !{{f",
        },
      ],
      "position": {
        "end": {
          "column": 33,
          "line": 1,
          "offset": 32,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Markdown extensions for interpolation works inside explicit markdown table 1`] = `
{
  "children": [
    {
      "type": "text",
      "value": "












",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "properties": {
                        "formula": "function|argument",
                      },
                      "tagName": "interpolation",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 26,
                      "line": 2,
                      "offset": 26,
                    },
                    "start": {
                      "column": 1,
                      "line": 2,
                      "offset": 1,
                    },
                  },
                  "properties": {},
                  "tagName": "th",
                  "type": "element",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "properties": {
                        "formula": "function|argument|argument",
                      },
                      "tagName": "interpolation",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 62,
                      "line": 2,
                      "offset": 62,
                    },
                    "start": {
                      "column": 26,
                      "line": 2,
                      "offset": 26,
                    },
                  },
                  "properties": {},
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 62,
                  "line": 2,
                  "offset": 62,
                },
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 1,
                },
              },
              "properties": {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 62,
              "line": 2,
              "offset": 62,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "properties": {},
          "tagName": "thead",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "properties": {
                        "formula": "function|argument",
                      },
                      "tagName": "interpolation",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 26,
                      "line": 4,
                      "offset": 147,
                    },
                    "start": {
                      "column": 1,
                      "line": 4,
                      "offset": 122,
                    },
                  },
                  "properties": {},
                  "tagName": "td",
                  "type": "element",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "properties": {
                        "formula": "function|argument",
                      },
                      "tagName": "interpolation",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 61,
                      "line": 4,
                      "offset": 182,
                    },
                    "start": {
                      "column": 26,
                      "line": 4,
                      "offset": 147,
                    },
                  },
                  "properties": {},
                  "tagName": "td",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 61,
                  "line": 4,
                  "offset": 182,
                },
                "start": {
                  "column": 1,
                  "line": 4,
                  "offset": 122,
                },
              },
              "properties": {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 61,
              "line": 4,
              "offset": 182,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 122,
            },
          },
          "properties": {},
          "tagName": "tbody",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 61,
          "line": 4,
          "offset": 182,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "properties": {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
